Made skills logos horizontal on smaller screens; fixed big-pictures on smaller screens
On smaller screens, the logos in the Technical Skills sections would
just be stacked, 1 per row. It worked, but it took a while to scroll
through. Now their sizes are just reduced and they are stacked
horizontally, so they take up 1/3 of the space.

Also, big-pictures were sized too small on smaller screens. Their
border-radii were not adjusted properly in accordance with their
resizing.

--- a/css/framework.scss
+++ b/css/framework.scss
@@ -159,7 +159,7 @@ img, button {
   border: 2px solid black !important;
 }
 
-$bootstrap-column-collapse-width: 1000px;
+$bootstrap-column-collapse-width: 992px;
 .stack-item {
   @media screen and (max-width: $bootstrap-column-collapse-width) {
     // set spacing for when Bootstrap collapses the buttons into a stack
@@ -203,6 +203,13 @@ $bootstrap-column-collapse-width: 1000px;
 .module-link img:hover {
   opacity: 0.8;
 }
-.module-link{
+
+.module-link h3 {
   color: #333!important;
+  @media screen and (max-width: $bootstrap-column-collapse-width) {
+    font-size: 18px;
+  }
+  @media screen and (max-width: 350px) {
+    font-size: 15px;
+  }
 }
